[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phmin"
version = "0.1.3"
authors = [
  { name="Erik Stacey", email="erik@erikstacey.com" },
]
description = "A basic python package for identifying frequencies present in time series data based on the principles of phase dispersion minimization. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/erikstacey/phmin"
"Bug Tracker" = "https://github.com/erikstacey/phmin/issues"